feat: add title with special font

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@ body {
   align-items: center;
   height: 100%;
 }
+
+@font-face {
+  font-family: digital-7;
+  src: url(./assets/fonts/digital-7.ttf);
+}
